<resources>
    <string name="app_name">Restaurant Manager</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>


    <string name="pending">PENDING</string>
    <string name="accepted">ACCEPTED</string>
    <string name="denied">DENIED</string>
    <string name="accept">ACCEPT</string>
    <string name="completed_e">COMPLETED</string>
    <string name="deny">DENY</string>
    <string name="complete">COMPLETE</string>

    <string name="title_activity_reservations">Reservations</string>
    <string name="btn_reservations">Reservations</string>

    <string name="reservation_id">"reservation ID: "</string>
    <string name="customer_name">"Customer Name: "</string>
    <string name="customer_phone_number">"Customer Phone Number: "</string>
    <string name="ordered_items">"Ordered items: "</string>
    <string name="additional_notes">"Additional notes: "</string>
    <string name="sender_id">"sender ID : "</string>
    <string name="time_date_reservation">"Time and Date: "</string>
    <string name="dialog_message_accept">Do you really want to accept this reservation?</string>
    <string name="dialog_title_accept">ACCEPT?</string>
    <string name="dialog_message_deny">Do you really want to deny this reservation?</string>
    <string name="dialog_message_complete">Do you really want to complete this reservation?</string>
    <string name="dialog_title_deny">DENY?</string>
    <string name="dialog_title_complete">COMPLETE?</string>
    <string name="reservations">Reservations</string>
    <string name="details">Details</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>

    <string name="menu_available_tab_title">Available</string>
    <string name="menu_unavailable_tab_title">Unavailable</string>
    <string name="mcat_move_title">Move to Unavailable</string>
    <string name="mct_delete_title">Delete</string>
    <string name="mcut_move_title">Move to Available</string>
    <string name="restaurant_menu_title">Restaurant Menu</string>
    <string name="mt_add_new_item_string">Add New Item</string>
    <string name="ami_name_field_title">Name</string>
    <string name="ami_name_field_hint">Enter your item\'s name here</string>
    <string name="ami_description_field_title">Description</string>
    <string name="ami_description_field_hint">Describe your item here</string>
    <string name="ami_price_field_title">Price</string>
    <string name="ami_price_field_hint">Enter the item\'s price here</string>
    <string name="ami_gluten_free_title">Gluten Free</string>
    <string name="ami_vegan_title">Vegan</string>
    <string name="ami_vegetarian_title">Vegetarian</string>
    <string name="ami_menu_new_item_title">New Menu Item</string>
    <string name="ami_menu_edit_item_title">Edit Menu Item</string>
    <string name="ami_name_warning">The name field cannot be empty</string>
    <string name="ami_description_warning">The description field cannot be empty</string>
    <string name="ami_price_warning">That is not a valid price</string>
    <string name="button_text_cancel">CANCEL</string>
    <string name="button_text_save">SAVE</string>
    <string name="mct_edit_title">Edit</string>

    <string name="review_info">The customer\'s reviews</string>
    <string name="review_info2">Based on</string>
    <string name="review_info3p">assessments</string>
    <string name="review_info3s">assessment</string>
    <string name="review_hint_reply">Insert your reply</string>
    <string name="review_info4">By</string>
    <string name="review_info5">on</string>

    <string name="review_hint_insert_title">Insert your review\'s Title</string>
    <string name="review_hint_insert">Insert review</string>

    <string name="phone">Phone:</string>
    <string name="editphone" translatable="false">Type you new number:</string>
    <string name="hours_open">Opening Hours:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thurdsay">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="day">Day</string>
    <string name="hours">Time</string>
    <string name="closed">Closed</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="prev" translatable="false">Prev.</string>
    <string name="next" translatable="false">Next</string>

    <string name="ami_browse_gallery_string">Browse Gallery</string>
    <string name="ami_take_photo_string">Take Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_show_item_details" translatable="false">ShowItemDetailsActivity</string>
    <string name="characteristics_title">Characteristics:</string>
    <string name="characteristics_default_text">None</string>
    <string name="sod_includes_title">Includes:</string>

    <string name="editFlipper">Edit</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten">Gluten-Free</string>

    <string name="fromcamera">New Photo</string>
    <string name="fromroll">From Gallery</string>
    <string name="deletephoto">Delete</string>
    <string name="category">Food Categories</string>


    <string-array name="foodcategories">
        <item>All Categories</item>
        <item>American</item>
        <item>Asian</item>
        <item>Beverages</item>
        <item>Hamburgers</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Greek</item>
        <item>Japanese</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Thai</item>

    </string-array>


    <string-array name="sortingfilters">
        <item>No Filters</item>
        <item>A-Z</item>
        <item>Closest First</item>
        <item>Best Reviews</item>


    </string-array>



    <string name="dialog_message_accept">Do you really want to accept this reservation?</string>
    <string name="dialog_title_accept">ACCEPT?</string>
    <string name="dialog_message_deny">Do you really want to deny this reservation?</string>
    <string name="dialog_title_deny">DENY?</string>

    <string name="ok">OK</string>
    <string name="back">BACK</string>

    <string name="paper_plane">&#xf1d8;</string>


    <string name="completed">COMPLETED</string>
    <string name="submit">SUBMIT</string>
    <string name="first_courses">First Courses</string>
    <string name="second_courses">Second Courses</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="drinks">Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="others">Others</string>
    <string name="offers">Offers</string>

    <string name="sandwiches">Sandwiches</string>
    <string name="cart">cart</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="go_to_cart">go to cart</string>
    <string name="cancel_data">cancel data</string>
    <string name="data_success">Data saved successfully</string>
    <string name="reservation_sent">Reservation sent</string>
    <string name="data_canceled">Data removed</string>
    <string name="temp_data_canceled">Temporary data deleted</string>
    <string name="notes_hint">Enter here additional notes for the restaurant</string>
    <string name="select_time">Select time</string>
    <string name="select_date">select date</string>
    <string name="modifications_not_saved">Modifications not saved</string>
    <string name="send">Send</string>
    <string name="empty_reservation">Please select at least one item</string>
    <string name="date">"Date : "</string>
    <string name="time">"Time : "</string>
    <string name="too_early">Too early</string>


    <string name="delete_reply">&#xf014;</string>
    <string name="close_icon">&#xf00d;</string>
    <string name="save_icon">&#xf0c7;</string>
    <string name="pencil_icon">&#xf040;</string>
    <string name="review_write">Write Review</string>
    <string name="delete_reply_text">Delete Reply</string>

    <string name="mandatory">Mandatory</string>

    <string name="reviews_insert" translatable="false">Customer Review</string>
    <string name="rd_make_reservation_string">Make Reservation</string>
    <string name="show_offers_title">Offers</string>

    <string name="item_added_first_time">Item added to the active reservation</string>
    <string name="item_added_successive_times">Item quantity incremented in the active reservation</string>
    <string name="ami_category_field_title">Category</string>
    <string name="restaurant_offers_title">Restaurant Offers</string>
    <string name="title_activity_add_menu_offer">AddMenuOfferActivity</string>
    <string name="amo_menu_edit_offer_title">Edit Offer</string>
    <string name="amo_menu_new_offer_title">New Offer</string>
    <string name="amo_offered_on_field_title">Offered On</string>
    <string name="toggle_button_monday">M</string>
    <string name="toggle_button_tuesday">T</string>
    <string name="toggle_button_wednesday">W</string>
    <string name="toggle_button_thursday">T</string>
    <string name="toggle_button_friday">F</string>
    <string name="toggle_button_saturday">S</string>
    <string name="toggle_button_sunday">S</string>
    <string name="amo_includes_string">Includes</string>
    <string name="amo_add_new_item">Add Item</string>
    <string name="amo_item_number_warning">You need to provide at least 1 item</string>

    <string name="noaccount">No account yet? Create one!</string>
    <string name="alreadyaccount">Already a member? Login</string>
    <string name="createaccount">Create Account</string>
    <string name="authenticating">Authenticating...</string>
    <string name="creatingaccount">Creating Account...</string>

    <string name="myreservations">My Reservations</string>
    <string name="myreviews">My Reviews</string>
    <string name="failedlogin">Login failed.</string>
    <string name="retry">Retry</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="streetn">Address</string>
    <string name="restname">Restaurant Name</string>

    <string name="signupsimple">Signup as customer</string>
    <string name="signupmanager">Own a Restaurant? Signup as Manager</string>
    <string name="errorsignup">Please fill in all required fields</string>
    <string name="signupwrong">Email already registered!</string>
    <string name="signupsuccess">Successfully Signed up! Now you can Login</string>
    <string name="gotologin">Go to Login</string>
    <string name="selectcategory">Please insert a category for your restaurant</string>


</resources>
